--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,36 @@
-requests==2.31.0
-beautifulsoup4==4.12.3
-selenium==4.18.1
-webdriver-manager==4.0.1
-pandas==2.2.1
-python-dotenv==1.0.1
 aiohttp==3.9.3
+aiosignal==1.3.2
 asyncio==3.4.3
-fake-useragent==1.4.0 
+attrs==25.3.0
+beautifulsoup4==4.12.3
+certifi==2025.1.31
+charset-normalizer==3.4.1
+dotenv==0.9.9
+fake-useragent==1.4.0
+frozenlist==1.5.0
+h11==0.14.0
+idna==3.10
+multidict==6.2.0
+numpy==1.26.4
+outcome==1.3.0.post0
+packaging==24.2
+pandas==2.2.1
+propcache==0.3.1
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2025.2
+requests==2.31.0
+selenium==4.18.1
+six==1.17.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.6
+trio==0.29.0
+trio-websocket==0.12.2
+typing_extensions==4.13.0
+tzdata==2025.2
+urllib3==2.3.0
+webdriver-manager==4.0.1
+wsproto==1.2.0
+yarl==1.18.3
